AppVeyor config file

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -374,7 +374,7 @@ deploy:
 #         notifications           #
 #---------------------------------#
   
-notifications:
+#notifications:
 
   # Email
   #- provider: Email
