--- a/appveyor.yml
+++ b/appveyor.yml
@@ -177,7 +177,10 @@ before_build:
 #before_package:
 
 # scripts to run after build
-#after_build:
+after_build:
+  - cmd /c "cd DnsDirector.Service\bin && 7z a ..\..\DnsDirector-$(version)_$(configuration).zip $(configuration) || exit /b 1"
+  - 7z a DnsDirector-$(version)_$(configuration).zip LICENSE
+  - 7z a DnsDirector-$(version)_$(configuration).zip README.md
 
 # to run your custom scripts instead of automatic MSBuild
 #build_script:
@@ -228,7 +231,7 @@ before_build:
 artifacts:
 
   # pushing a single file
-  #- path: test.zip
+  - path: DnsDirector-$(version)_$(configuration).zip
 
   # pushing a single file with environment variable in path and "Deployment name" specified
   #- path: MyProject\bin\$(configuration)
@@ -240,8 +243,8 @@ artifacts:
   # pushing all *.nupkg files in directory
   #- path: out\*.nupkg
 
-  - path: DnsDirector.Service\bin\$(configuration)
-    name: DnsDirector-$(version)
+  #- path: DnsDirector.Service\bin\$(configuration)
+  #  name: DnsDirector-$(version)
 
 
 #---------------------------------#
