--- a/appveyor.yml
+++ b/appveyor.yml
@@ -178,9 +178,9 @@ before_build:
 
 # scripts to run after build
 after_build:
-  - cmd /c "cd DnsDirector.Service\bin && 7z a ..\..\DnsDirector-%version%_%configuration%.zip $(configuration) || exit /b 1"
-  - 7z a DnsDirector-%version%_%configuration%.zip LICENSE
-  - 7z a DnsDirector-%version%_%configuration%.zip README.md
+  - cmd /c "cd DnsDirector.Service\bin && 7z a ..\..\DnsDirector-%APPVEYOR_BUILD_VERSION%_%CONFIGURATION%.zip %CONFIGURATION% || exit /b 1"
+  - 7z a DnsDirector-%APPVEYOR_BUILD_VERSION%_%CONFIGURATION%.zip LICENSE
+  - 7z a DnsDirector-%APPVEYOR_BUILD_VERSION%_%CONFIGURATION%.zip README.md
 
 # to run your custom scripts instead of automatic MSBuild
 #build_script:
@@ -242,9 +242,6 @@ artifacts:
 
   # pushing all *.nupkg files in directory
   #- path: out\*.nupkg
-
-  #- path: DnsDirector.Service\bin\$(configuration)
-  #  name: DnsDirector-$(version)
 
 
 #---------------------------------#
