--- a/appveyor.yml
+++ b/appveyor.yml
@@ -178,9 +178,9 @@ before_build:
 
 # scripts to run after build
 after_build:
-  - cmd /c "cd DnsDirector.Service\bin && 7z a ..\..\DnsDirector-%APPVEYOR_BUILD_VERSION%_%CONFIGURATION%.zip %CONFIGURATION% || exit /b 1"
-  - 7z a DnsDirector-%APPVEYOR_BUILD_VERSION%_%CONFIGURATION%.zip LICENSE
-  - 7z a DnsDirector-%APPVEYOR_BUILD_VERSION%_%CONFIGURATION%.zip README.md
+  - cmd /c "cd DnsDirector.Service\bin && 7z a ..\..\DnsDirector.zip %CONFIGURATION% || exit /b 1"
+  - 7z a DnsDirector.zip LICENSE
+  - 7z a DnsDirector.zip README.md
 
 # to run your custom scripts instead of automatic MSBuild
 #build_script:
@@ -221,7 +221,7 @@ after_build:
 #  - echo This is my custom test script
 
 # to disable automatic tests 
-#test: off
+test: off
 
 
 #---------------------------------#
@@ -231,7 +231,7 @@ after_build:
 artifacts:
 
   # pushing a single file
-  - path: DnsDirector-$(version)_$(configuration).zip
+  #- path: package.zip
 
   # pushing a single file with environment variable in path and "Deployment name" specified
   #- path: MyProject\bin\$(configuration)
@@ -242,6 +242,10 @@ artifacts:
 
   # pushing all *.nupkg files in directory
   #- path: out\*.nupkg
+
+  - path: DnsDirector.zip
+    name: DnsDirector-$(version)_$(configuration)
+
 
 
 #---------------------------------#
