--- a/appveyor.yml
+++ b/appveyor.yml
@@ -332,7 +332,7 @@ deploy:
   - provider: GitHub
     #artifact: /.*\.nupkg/           # upload all NuGet packages to release assets
     draft: false
-    prerelease: true
+    prerelease: false
     on:
       branch: master                # release from master branch only
       appveyor_repo_tag: true       # deploy on tag push only
