Now with install scripts!

--- a/DnsDirector.Service/DnsDirector.Service.csproj
+++ b/DnsDirector.Service/DnsDirector.Service.csproj
@@ -103,7 +103,13 @@
     <None Include="DnsDirectorRoutes.yml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="install_service.cmd">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
+    <None Include="remove_service.cmd">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
